# rt-rag-repro

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/longbench/: 2wikimqa_100_seed42.jsonl  2wikimqa_100_seed42.meta.json  hotpotqa_100_seed42.meta.json  musique_100_seed42.meta.json
main/: analyze_musique_errors.py  config.py  config_adaptive.py  config_ori.py  control_helpers.py  debug_logging.py  load_data.py  load_data_adaptive.py  retrieve.py  tree_decompose.py  tree_decompose_adaptive.py
main/build_dense_index/: config.py  config_2wikimqa.py  config_hotpotqa.py  dense_build_index.py
output/2wikimqa/dense_chunk200_topk1_25_topk2_8/: 1.txt  run_summary.md
plan/: adaptive_badcase_diagnosis_2026-04-19.md  adaptive_badcase_status_2026-04-18.md  adaptive_slot_grounded_v1_plan.md  adaptive_timeout_fix_plan.md  adaptive_typed_v1_final62_run.md  bugfix_retry_annotation.md  plan1.md  presentation_talk_outline_2026-04-21.md  results_adaptive_typed_v1_final_2026-04-21.md  revised_plan.md  revised_plan2.md  simplified_plan copy.md  simplified_plan.md
scripts/: sample_subset.py
