[project]
name = "rt-rag-repro"
version = "0.1.0"
description = "Minimal uv-managed environment for RT-RAG reproduction."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiofiles==24.1.0",
    "datasets==3.5.1",
    "faiss-cpu==1.11.0",
    "numpy==1.26.4",
    "openai==1.77.0",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "sentencepiece==0.2.0",
    "spacy==3.8.4",
    "torch==2.5.1",
    "tqdm==4.67.1",
    "transformers==4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
